Some fixes supporting newer versions of Java