@@ -38,7 +38,9 @@ fun Project.configureJvm() {
 		dependsOn("jvmMainClasses")
 		project.afterEvaluate {
 			val beforeJava9 = System.getProperty("java.version").startsWith("1.")
-		    if (!beforeJava9) task.jvmArgs("--add-opens=java.desktop/sun.java2d.opengl=ALL-UNNAMED")
+		    if (!beforeJava9) {
+                task.jvmArgs(project.korge.addOpens)
+            }
 			task.main = korge.realJvmMainClassName
 		}
 	}
